Bug 509904 - sox is installed, but not detected
Summary: sox is installed, but not detected
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-25 00:03 UTC by HPetrus
Modified: 2025-11-03 22:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description HPetrus 2025-09-25 00:03:43 UTC
SUMMARY
sox 14.6.0 package is installed and runs in cli, but k3b doesn't detect it no matter the path.

STEPS TO REPRODUCE
1. Install sox 14.6.0
2. Refresh k3b programs
3. sox (not found)

OBSERVED RESULT
sox not found.

EXPECTED RESULT
sox install bin path should be present
Comment 1 Bug Janitor Service 2025-09-25 06:11:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/k3b/-/merge_requests/89
Comment 2 Albert Astals Cid 2025-11-03 22:14:31 UTC
Git commit e15cc00274ea48e84a7448efd968c2cd58961d7f by Albert Astals Cid, on behalf of Antonio Rojas.
Committed on 03/11/2025 at 22:14.
Pushed by aacid into branch 'master'.

Support sox-ng in the sox plugin

sox is unmaintained and some distros are switching to the maintained sox-ng fork, make sure k3b works with it

M  +3    -0    plugins/encoder/sox/k3bsoxencoder.cpp

https://invent.kde.org/multimedia/k3b/-/commit/e15cc00274ea48e84a7448efd968c2cd58961d7f