Support sox-ng in the sox plugin

sox is unmaintained and some distros are switching to the maintained sox-ng fork, make sure k3b works with it

BUG: 509904